# arc_cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.sh
frontend/: index.html  main.js  testsocket.html
src/: json.hpp  kernel.cu  kernel.h  main.cpp  server.cpp  server.h  simulation.cpp  simulation.h  test_server.cpp
